[gd_scene load_steps=23 format=3 uid="uid://mlrqr7087jg5"]

[ext_resource type="Texture2D" uid="uid://c8o1unqjeecku" path="res://Assets/Forest_Monsters_FREE/Forest_Monsters_FREE/Mushroom/Mushroom without VFX/Mushroom-Idle.png" id="1_nq82t"]
[ext_resource type="Script" path="res://Scripts/mushroom.gd" id="1_wte86"]
[ext_resource type="Texture2D" uid="uid://w0kumbqeboh3" path="res://Assets/Forest_Monsters_FREE/Forest_Monsters_FREE/Mushroom/Mushroom without VFX/Mushroom-Attack.png" id="2_78fyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ues2c"]
size = Vector2(30, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_itmri"]
atlas = ExtResource("2_78fyi")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_inrsu"]
atlas = ExtResource("2_78fyi")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxn4x"]
atlas = ExtResource("2_78fyi")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pleay"]
atlas = ExtResource("2_78fyi")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyn3i"]
atlas = ExtResource("2_78fyi")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeqog"]
atlas = ExtResource("2_78fyi")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejo0h"]
atlas = ExtResource("2_78fyi")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtke5"]
atlas = ExtResource("2_78fyi")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgnb8"]
atlas = ExtResource("2_78fyi")
region = Rect2(640, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4wo"]
atlas = ExtResource("2_78fyi")
region = Rect2(720, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3whyk"]
atlas = ExtResource("1_nq82t")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blhnd"]
atlas = ExtResource("1_nq82t")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvvaf"]
atlas = ExtResource("1_nq82t")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekxue"]
atlas = ExtResource("1_nq82t")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbfjd"]
atlas = ExtResource("1_nq82t")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2amh6"]
atlas = ExtResource("1_nq82t")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ytr"]
atlas = ExtResource("1_nq82t")
region = Rect2(480, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tum0h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_itmri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inrsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxn4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pleay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyn3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeqog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejo0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtke5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgnb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj4wo")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3whyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blhnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvvaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekxue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbfjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2amh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ytr")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Mushroom" type="CharacterBody2D"]
script = ExtResource("1_wte86")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 32)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_ues2c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_tum0h")
animation = &"Attack"
autoplay = "Idle"
frame = 9
frame_progress = 1.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="NavigationLink2D" type="NavigationAgent2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
